--- a/home.html
+++ b/home.html
@@ -104,7 +104,7 @@
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
           <!-- <img src="./images/home.png" class="img-fluid animated" alt=""> -->
-          <img src="./images/gallery/20.jpg" class="img-fluid animated" alt=""
+          <img src="./images/gallery-img2.png" class="img-fluid animated" alt=""
             style="border-radius: 50%;border: 4px solid rgb(43, 81, 247);">
         </div>
       </div>
