--- a/contactus.html
+++ b/contactus.html
@@ -202,7 +202,7 @@
           <div class="col-xl-4 col-lg-4 mb-50">
             <div class="footer-widget">
               <div class="footer-logo">
-                <a href="index.html"><img src="./images/logo5.jpg" class="img-fluid" alt="logo"></a>
+                <a href="home.html"><img src="./images/logo5.jpg" class="img-fluid" alt="logo"></a>
               </div>
               <div class="footer-text">
                 <p>Providing a complete career solution to our students and enabling them to stand out in the crowd.</p>
