--- a/home.html
+++ b/home.html
@@ -105,7 +105,7 @@
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
           <!-- <img src="./images/home.png" class="img-fluid animated" alt=""> -->
           <img src="./images/gallery-img2.png" class="img-fluid animated" alt=""
-           >
+           style="height: 400px ; width: 400px;">
         </div>
       </div>
     </div>
@@ -248,7 +248,7 @@
           <div class="col-xl-4 col-lg-4 mb-50">
             <div class="footer-widget">
               <div class="footer-logo">
-                <a href="index.html"><img src="./images/logo5.jpg" class="img-fluid" alt="logo"></a>
+                <a href="home.html"><img src="./images/logo5.jpg" class="img-fluid" alt="logo"></a>
               </div>
               <div class="footer-text">
                 <p>Providing a complete career solution to our students and enabling them to stand out in the crowd.</p>
