--- a/aboutus.html
+++ b/aboutus.html
@@ -233,7 +233,7 @@
 
         </div>
       </a>
-      <a href="" target="_blank">
+      <!-- <a href="" target="_blank">
         <div class="portfolio-img">
           <iframe width="auto" height="auto"
             src="https://www.youtube.com/embed/videoseries?list=PLGjazuVMPiOYRA6Bz4wDZ3dOCyPhV1NRY"
@@ -250,7 +250,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
         </div>
-      </a>
+      </a> -->
 
 
     </div>
